recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:21: error: not enough arguments for method hanoiPair: (height: Int, src: Int, other: Int, dst1: Int, dst2: Int)Unit.
Unspecified value parameter dst2.
    hanoiPair(height-1, src, dst2, other)
             ^