recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.code
def hanoi(height:Int, src:Int, other:Int, dst:Int) {
  if(height != 0){
  	hanoi(height-1, src, dst, other)
  	deplace(src, dst)
  	hanoi(height-1, other, src, dst)
  }
}

def hanoiPair(height:Int, src:Int, other:Int, dst1:Int, dst2:Int){
  if(height != 0){
    hanoiPair(height-1, src, dst1, other, dst2)
    deplace(src, dst2)
    deplace(src, dst2)
    hanoiPair(height-1, other, src, dst1, dst2)
  }
}

def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
  if(height != 0){
    hanoiPair(height-1, src, dst2, other)
    deplace(src, dst2)
    deplace(src, dst1)
    splitHanoi(height -1, other, src, dst1, dst2)
  }
}